# clearml

./: pyproject.toml  requirements.txt  setup.py  test_storage_manager.py
clearml/: logger.py  model.py  task.py
clearml/automation/: auto_scaler.py  aws_driver.py  controller.py  job.py  optimization.py  parameters.py  scheduler.py
clearml/backend_api/services/v2_20/: tasks.py
clearml/backend_api/services/v2_9/: queues.py  tasks.py
clearml/backend_api/session/: session.py
clearml/backend_config/: config.py  entry.py  log.py
clearml/backend_interface/: model.py  util.py
clearml/backend_interface/datasets/: __init__.py  hyper_dataset.py
clearml/backend_interface/metrics/: reporter.py
clearml/backend_interface/task/: populate.py  task.py
clearml/binding/: args.py  artifacts.py  click_bind.py  fire_bind.py  gradio_bind.py  hydra_bind.py  jsonargs_bind.py
clearml/binding/frameworks/: tensorflow_bind.py
clearml/config/default/: sdk.conf
clearml/datasets/: dataset.py
clearml/debugging/: log.py  timer.py
clearml/hyperdatasets/: core.py
clearml/storage/: helper.py  manager.py
clearml/utilities/: plotly_reporter.py  resource_monitor.py
clearml/utilities/pigar/: __main__.py
clearml/utilities/process/: mp.py
clearml/utilities/pyhocon/: config_parser.py
docs/: clearml.conf
examples/frameworks/huggingface/: transformers.ipynb
examples/pipeline/: pipeline_with_dynamic_loop.py
examples/services/aws-autoscaler/: aws_autoscaler.py  aws_autoscaler.yaml
examples/services/cleanup/: cleanup_service.py
tests/: __init__.py
tests/test_build/: __init__.py  test_build_equivalence.py  test_cli_commands.py
tests/test_datasets/: e2e_test.py  test_dataset_features.py
